responsive layout fix word-wrap

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -4,6 +4,7 @@ body {
   font-family: 'Open Sans', sans-serif;
   padding-bottom: 30px;
   padding-top: 70px;
+  word-wrap: break-word;
 }
 .navbar-inverse .navbar-brand {
   color: #ff5252;
